Wed Nov 22 18:53:33 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* A couple of missed bits of the previous change - we no longer need
	  to do an initialisation step to databases, and we no longer need
	  to subtract 2 from the item count in recordtable to get the doccount.

Wed Nov 22 18:44:01 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove QuartzRecord::initialise() - replace by assuming initial
	  values if the TOTLEN or NEXTDID tags aren't present.  Stops having
	  a wasted revision when a database is created.

Wed Nov 22 18:35:56 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove QuartzBufferedTable::get_tag() method - was only used to
	  check whether a tag was present, not to access the tag.  Replaced
	  with a have_tag() method.  This tidying up should help with making
	  smart pointers to point to a tag - no longer have to deal with
	  null pointers.

Wed Nov 22 18:28:36 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Turned the rest of the Btree API functions into Btree member
	  functions.
	
	* Added a bit of const to sys_write_* and get_[u]int4

Wed Nov 22 15:53:16 GMT 2000 Olly Betts

	* Removed OmPostListIterator::get_termfreq() and
	  OmPostListIterator::get_collection_freq() - you don't expect a
	  container iterator to provide a method to find the size of the
	  container, and the database provides similar methods to find this
	  information.

Wed Nov 22 14:59:11 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add configure option to enable or disable compilation of the
	  indexer library - defaults to enable: --enable-indexer

	* Move textfile_indexer and index_utils into testsuite - not part
	  of the proper indexer.

Wed Nov 22 13:13:20 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Store positionlists in quartz using difference between successive
	  positions, rather than the raw positions.
